2025-01-27  Oliver Kiddle  <opk@zsh.org>

	* github #125: Kouhei Yanagita: Completion/Unix/Command/_ruby:
	Add completion for irb --no-pager

	* unposted: Completion/Unix/Command/_openldap: fix quoting

	* 53327: Completion/Unix/Command/_git: update for git 2.47

	* 53328: Completion/Linux/Command/_cpupower,
	Completion/Linux/Command/_cryptsetup,
	Completion/Linux/Command/_ethtool,
	Completion/Linux/Command/_iptables,
	Completion/Linux/Command/_selinux, Completion/Linux/Command/_sshfs,
	Completion/Linux/Command/_valgrind, Completion/Unix/Command/_abcde,
	Completion/Unix/Command/_dig, Completion/Unix/Command/_flac,
	Completion/Unix/Command/_gnutls, Completion/Unix/Command/_jq,
	Completion/Unix/Command/_pv, Completion/Unix/Command/_sqlite,
	Completion/Unix/Command/_ssh, Completion/X/Command/_zeal: 
	completion options update

	* 53326: Completion/Linux/Command/_findmnt,
	Completion/Linux/Command/_free, Completion/Linux/Command/_losetup,
	Completion/Linux/Command/_lsblk, Completion/Linux/Command/_pidof,
	Completion/Linux/Command/_slabtop, Completion/Linux/Command/_wipefs,
	Completion/Unix/Command/_awk, Completion/Unix/Command/_chmod,
	Completion/Unix/Command/_chown, Completion/Unix/Command/_cmp,
	Completion/Unix/Command/_find, Completion/Unix/Command/_hexdump,
	Completion/Unix/Command/_last, Completion/Unix/Command/_mv,
	Completion/Unix/Command/_objdump, Completion/Unix/Command/_pgrep,
	Completion/Unix/Command/_ping, Completion/Unix/Command/_ps,
	Completion/Unix/Command/_readelf, Completion/Unix/Command/_strip,
	Completion/Unix/Command/_uptime, Completion/Unix/Command/_w:
	completion updates for core Linux utils

	* 53325: Completion/BSD/Command/_acpiconf,
	Completion/BSD/Command/_bsdconfig, Completion/BSD/Command/_pkgin,
	Completion/BSD/Command/_procstat, Completion/BSD/Command/_sockstat,
	Completion/BSD/Command/_systat, Completion/Unix/Command/_date,
	Completion/Unix/Command/_df, Completion/Unix/Command/_dhclient,