@@ -1,5 +1,9 @@
 2025-01-27  Oliver Kiddle  <opk@zsh.org>
 
+	* github #126: Wu, Zhenyu: Completion/Base/Completer/_expand_alias,
+	Src/exec.c, Src/init.c, Src/parse.c, Src/utils.c, Src/zsh.h,
+	configure.ac: Fix some typos
+
 	* github #125: Kouhei Yanagita: Completion/Unix/Command/_ruby:
 	Add completion for irb --no-pager
 
